--- a/notifications/config.json
+++ b/notifications/config.json
@@ -4,7 +4,7 @@
     "project": "some project",
     "environment": "qa.guru",
     "comment": "any comment here, @ITaygib",
-    "reportLink": "https://jenkins.autotests.cloud",
+    "reportLink": "https://jenkins.autotests.cloud/job/TrelloTest/5/allure/",
     "language": "en",
     "allureFolder": "allure-report/",
     "enableChart": true
