--- a/notifications/config.json
+++ b/notifications/config.json
@@ -5,7 +5,7 @@
     "environment": "qa.guru",
     "comment": "any comment here, @ITaygib",
     "reportLink": "https://jenkins.autotests.cloud/job/TrelloTest/5/allure/",
-    "language": "en",
+    "language": "ru",
     "allureFolder": "allure-report/",
     "enableChart": true
   },
