--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,13 @@ dependencies {
             "org.junit.jupiter:junit-jupiter:5.9.1",
             "org.slf4j:slf4j-simple:2.0.6",
             "io.rest-assured:rest-assured:5.3.0",
-            "com.fasterxml.jackson.core:jackson-databind:2.14.2",
+            "com.fasterxml.jackson.core:jackson-databind:2.15.2",
             "org.assertj:assertj-core:3.24.2",
             "com.github.javafaker:javafaker:1.0.2",
             "io.rest-assured:json-path:5.3.0",
-            "io.qameta.allure:allure-rest-assured:2.21.0"
+            "io.qameta.allure:allure-rest-assured:2.21.0",
+            'org.assertj:assertj-core:3.24.2',
+            "org.aeonbits.owner:owner:1.0.12",
     )
 }
 
